# Study

GDAL/day_01/: CreateCopy.cpp  GDAL分块处理简单的流程-2.cpp  GDAL分块处理简单的流程.cpp  GDAL库进度信息.cpp  Raster.cpp  create.cpp
QT/day_01/: 123.txt  234.txt  README.md
cuda/: 2D_convolution.cu  2D_pooling.cu  atomics.cu  blur.cu  get_gpuInfo.cu  reduce_sum_2stage.cu  scan.cu  transpose.cu  vec_add1.cu  vec_add2.cu
cuda/common/: image.h
cuda/cuBLAS/: README.md  matrix_mul.cpp  matrix_mul_vector.cpp
cuda/cuDNN/: README.md  conv.cu
cuda/cuda-samples/: README.md  deviceQuery.cu
cuda/example/: 1D_Texture_Memory-2.cu  1D_Texture_Memory.cu  2D_Texture_Memory-2.cu  2D_Texture_Memory-3.cu  2D_Texture_Memory-4.cu  2D_Texture_Memory.cu  2D_array.cpp  2D_array.cu  2D_array_Share_Memory.cu  2Dvec_add.cu  README.md  RGB2Gray.cu  UVA.cu  blur2.cu  constant_Memory.cu  matrix_mul.cu  pixel_hist.cu  pixel_hist2.cu  reduce_sum_3stage.cu  sort.cu  vec_add.cu
cuda/other/: convelution.py  matrixMul.py
cuda/pycuda/: DynamicSourceModule.py  README.md  shared_memory+global_memory.py  stream.py  surface_memory.py  texture_memory.py
cuda/tensorrt/: README.md
cuda/thrust/: README.md  matrix_mul.cu
julia/day01/: build.jl  conv2d_gpu.jl  forloop_cpu.jl  forloop_cpu2.jl  gpu_kernel.jl  parallelization_cpu.jl  process_cpu.jl  rgb2gray.jl  shareMemory.jl  simple_cpu.jl  simple_gpu.jl  tools.jl
opencv/day_01/: 01_load_image.cpp  02_Mat_create.cpp  03_Mat_copy.cpp  04_scanImg.cpp  05_bgr2gray.cpp  Makefile  (+11 more)
pytorch/: README.md  定义神经网络模型.md
pytorch/mnist/: CMakeLists.txt  load_from_cpp.py  mnist.cpp
(+358 files in other folders)
